correct mobile modal for 320px phones

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
           <p class="modal-header">Оставьте свои данные, мы вам перезвоним</p>
           <div class="modal-form-container">
 
-            <input class="modal-input" name="Name" id="name" type="text" placeholder=" " required />
+            <input class="modal-input" name="Name" id="name" type="tel" placeholder=" " required />
             <label class="modal-label" for="name">Имя</label>
             <svg class="modal-icon">
               <use href="./images/person.svg#person">
