--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
             info@devstudio.com</a>
         </li>
         <li>
-          <a class="link header-link" href="tel:380961111111">
+          <a class="link header-link" href="tel:+380961111111">
             <svg class="icon-smartphone" aria-label="Смартфон" width="10" height="15">
               <use href="./images/symbol-defs.svg#icon-smartphone" />
             </svg>
