--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   </header>
   <main>
     <section class="hero-section">
-      <h1 class="hero-header">Эффективные решения для вашего бизнеса</h1>
-      <button class="hero-button button" data-modal-open>Заказать услугу</button>
+      <div class="hero-container">
+        <h1 class="hero-header">Эффективные решения <br /> для вашего бизнеса</h1>
+        <button class="hero-button button" data-modal-open>Заказать услугу</button>
+      </div>
     </section>
     <section class="our-advantages">
       <div class="container">
@@ -360,8 +362,7 @@
             </li>
           </ul>
         </li>
-        <li>
-
+        <li class="subscribe-us-item">
           <p class="subscribe">Подпишитесь на рассылку</p>
           <form class="footer-form">
             <input required class="footer-email-input" type="email" placeholder="E-mail" name="Email"
@@ -379,7 +380,7 @@
   </footer>
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-      <button class="modal-close-button" data-modal-close><svg class="crosshair-icon">
+      <button class="modal-close-button" data-modal-close><svg class="crosshair-icon" width="11px" height="11px">
           <use href="./images/crosshair.svg#crosshair">
           </use>
         </svg></button>
@@ -388,7 +389,7 @@
           <p class="modal-header">Оставьте свои данные, мы вам перезвоним</p>
           <div class="modal-form-container">
 
-            <input class="modal-input" name="Name" id="name" type="tel" placeholder=" " required />
+            <input class="modal-input" name="Name" id="name" type="text" placeholder=" " required />
             <label class="modal-label" for="name">Имя</label>
             <svg class="modal-icon">
               <use href="./images/person.svg#person">
@@ -396,7 +397,7 @@
             </svg>
           </div>
           <div class="modal-form-container">
-            <input class="modal-input" name="Phone" id="phone" type="text" placeholder=" " required />
+            <input class="modal-input" name="Phone" id="phone" type="tel" placeholder=" " required />
             <label class="modal-label" for="phone">Телефон</label>
             <svg class=" modal-icon">
               <use href="./images/phone.svg#phone">
@@ -404,7 +405,7 @@
             </svg>
           </div>
           <div class="modal-form-container">
-            <input class="modal-input" name="Mail" id="mail" type="text" placeholder=" " required />
+            <input class="modal-input" name="Mail" id="mail" type="email" placeholder=" " required />
             <label class="modal-label" for="mail">Почта</label>
             <svg class="modal-icon">
               <use href="./images/email.svg#email">
