--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,13 @@
   <header>
     <nav class="container main-nav">
       <a class="header-logo" href="./index.html"><span class="logo-web">Web</span> Studio</a>
+      <svg class="menu">
+        <use href="./images/menu.svg#menu"></use>
+      </svg>
       <ul class="header-list">
-        <li><a class="link our-pages " href="./index.html">Студия</a></li>
+        <li><a class="link our-pages current-page" href="./index.html">Студия</a></li>
         <li>
-          <a class="link our-pages current-page" href="./portfolio.html">Портфолио</a>
+          <a class="link our-pages" href="./portfolio.html">Портфолио</a>
         </li>
         <li><a class="link our-pages" href="">Контакты</a></li>
       </ul>
@@ -30,7 +33,7 @@
             info@devstudio.com</a>
         </li>
         <li>
-          <a class="link header-link" href="tel:+380961111111">
+          <a class="link header-link" href="tel:380961111111">
             <svg class="icon-smartphone" aria-label="Смартфон" width="10" height="15">
               <use href="./images/symbol-defs.svg#icon-smartphone" />
             </svg>
@@ -246,8 +249,7 @@
             </li>
           </ul>
         </li>
-        <li>
-
+        <li class="subscribe-us-item">
           <p class="subscribe">Подпишитесь на рассылку</p>
           <form class="footer-form">
             <input required class="footer-email-input" type="email" placeholder="E-mail" name="Email"
