correct photo in mobile version

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="header">
       <nav class="container main-nav">
         <a class="header-logo" href="./index.html"><span class="logo-web">Web</span> Studio</a>
-        <button class="menu-button is-open" type="button" data-menu-button>
+        <button class="menu-button" type="button" data-menu-button>
           <svg class="menu" width="40px" height="40px" aria-label="Переключатель мобильного меню">
             <use class="menu-icon-menu" href="./images/menu.svg#menu"></use>
             <use class="menu-icon-crosshair" href="./images/crosshair_menu.svg#crosshair"></use>
           </svg>
         </button>
 
-        <div class="navigation is-open" data-menu>
+        <div class="navigation" data-menu>
           <ul class="header-list">
             <li><a class="link our-pages current-page" href="./index.html">Студия</a></li>
             <li>
