--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
 
         <div class="navigation" data-menu>
           <ul class="header-list">
-            <li><a class="link our-pages" href="./index.html">Студия</a></li>
+            <li><a class="link our-pages " href="./index.html">Студия</a></li>
             <li>
               <a class="link our-pages current-page" href="./portfolio.html">Портфолио</a>
             </li>
@@ -221,7 +221,7 @@
           <address class="">
             г. Киев, пр-т Леси Украинки, 26
             <a class="link footer-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="link footer-address" href="tel:380961111111">+38 096 111 11 11</a>
+            <a class="link footer-address" href="tel:+380961111111">+38 096 111 11 11</a>
           </address>
         </li>
         <li class="join-us">
@@ -270,9 +270,10 @@
           </form>
         </li>
       </ul>
-      <p class="copyright">2020 | Developed by GoIT Students</p>
+      <p class="copyright">2020 | Developed by Maksim Karpets</p>
     </div>
   </footer>
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
