--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <address class="">
             г. Киев, пр-т Леси Украинки, 26
             <a class="link footer-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="link footer-address" href="tel:380961111111">+38 096 111 11 11</a>
+            <a class="link footer-address" href="tel:+380961111111">+38 096 111 11 11</a>
           </address>
         </li>
         <li class="join-us">
@@ -383,7 +383,7 @@
           </form>
         </li>
       </ul>
-      <p class="copyright">2020 | Developed by GoIT Students</p>
+      <p class="copyright">2020 | Developed by Maksim Karpets</p>
     </div>
   </footer>
   <div class="backdrop is-hidden" data-modal>
